--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@
   --pink-color: #ff5de9cc;
   --darkpink-color: #69008c;
 
-  
+
   --prim-color: white;
   --dark-color: gray;
 }
@@ -57,4 +57,17 @@
 
 .text-josef {
   font-family: "Josefin Sans", serif;
+}
+
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  /* for Internet Explorer, Edge */
+  scrollbar-width: none;
+  /* for Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+  /* for Chrome, Safari, and Opera */
 }
